<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_explanation">操作說明</string>
    <string name="action_system">系統管理</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">行動化辦公室</string>
    <string name="password">密碼</string>
    <string name="login">登入</string>
    <string name="password2">確認密碼</string>
    <string name="signuphere">返回註冊帳號</string>
    <string name="employeeid">員工編號</string>
    <string name="email">email</string>
    <string name="signup">註冊</string>
    <string name="loginhere">點此登入</string>
    <string name="idoremail">員工編號 or Email</string>
    <string name="useemail">使用Email</string>
    <string name="useemployeeid">使用員工編號</string>
    <string name="logout">登出</string>
    <string name="change_password">更改密碼</string>
    <string name="app_time_attendance_system">打卡出勤系統</string>
    <string name="app_staff_scheduling_system">員工排班系統</string>
    <string name="sing_up">註冊</string>
    <string name="forget_passward">忘記密碼</string>

    <string name="idlogin_php">http://192.168.137.1/Hospital/idlogin.php</string>
    <string name="login_php">http://192.168.137.1/Hospital/login.php</string>
    <string name="imeiPublic_php">http://192.168.137.1/Hospital/imeiPublic.php</string>
    <string name="employee_php">http://192.168.137.1/Hospital/employee.php</string>
    <string name="signup_php">https://192.168.137.1/Hospital/signup.php</string>
    <string name="Getimei_php">https://192.168.137.1/Hospital/Getimei.php</string>


    <string name="title_activity_welcome">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="biometric_dialog_cancel">Cancel</string>
    <string name="biometric_dialog_title">Verification</string>
    <string name="biometric_dialog_subtitle">Verify fingerprint to continue</string>
    <string name="biometric_dialog_state_normal">Fingerprint sensor</string>
    <string name="biometric_dialog_state_failed">Failed to identify, please try again</string>
    <string name="biometric_dialog_state_error">Verification error, please enter payment password</string>
    <string name="biometric_dialog_state_error_enable_process">Verification error, setup failed</string>
    <string name="biometric_dialog_state_succeeded">Verification successful</string>
    <string name="biometric_dialog_use_password">Use Password</string>

    <string name="meeting_manager">會議管理員</string>
    <string name="meeting_name">會議名稱</string>
    <string name="meeting_place">地點</string>
    <string name="meeting_time">時間</string>
    <string name="mobile_id">設備編號</string>
    <string name="need_register">1.每人僅可使用一個行動裝置簽到退\n2.請先為您的行動裝置註冊！\n 3.未註冊的行動裝置無法簽到退！</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="pos_name">職稱 : 藥師</string>
    <string name="prompt_password">密碼 (門急住、KM、AD密碼或民國年生日)</string>
    <string name="prompt_wcode">員工編號</string>
    <string name="pwd">登入密碼</string>
    <string name="pwd_change">修改密碼</string>
    <string name="pwd_confirm">確認密碼</string>
    <string name="pwd_new">新密碼</string>
    <string name="register">註冊</string>
    <string name="register_notice">註冊後，需待20小時以後，才可以使用行動裝置簽到退</string>
    <string name="search">搜尋</string>
    <string name="section">簽到退區段</string>
    <string name="section1">第一段班</string>
    <string name="section2">第二段班</string>
    <string name="select_work_dept">選擇工作單位.....</string>
    <string name="shared_preferences_name">ehr</string>
    <string name="shift">班別</string>
    <string name="signin">上班簽到</string>
    <string name="signout">下班簽退</string>
    <string name="subject">主題</string>
    <string name="tagmanager_preview_dialog_button">Continue</string>
    <string name="tagmanager_preview_dialog_message">Preview mode updated.</string>
    <string name="tagmanager_preview_dialog_title">Preview</string>
    <string name="title_activity_explanation">操作說明</string>
    <string name="title_activity_login">系統登入</string>
    <string name="title_activity_release">版本說明</string>
    <string name="title_activity_signin">簽到退</string>
    <string name="title_activity_user">使用者設定</string>
    <string name="use_mobile_signin">使用行動裝置簽到退</string>
    <string name="user_department_name">編制單位</string>
    <string name="user_name">姓名</string>
    <string name="user_work_department_name">工作單位</string>
    <string name="wcode">員工編號</string>
    <string name="wifi_seting">Wi-Fi設定</string>
    <string name="work_date">工作日</string>
    <string name="work_dept">工作單位</string>
    <string name="work_off">下班</string>
    <string name="work_on">上班</string>
    <string name="title_activity_settings">設定</string>

    <!-- Preference Titles -->
    <string name="messages_header">安全資訊</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="usebio_face_summary_on">使用臉部辨識</string>
    <string name="usebio_face_summary_off">不使用臉部辨識</string>
    <string name="usebio_finger_summary_on">使用指紋辨識</string>
    <string name="usebio_finger_summary_off">不使用指紋辨識</string>
    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="default_notification_channel_title">Default Channel</string>


</resources>