<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".Login">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsbold"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="#ff008577"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                tools:targetApi="jelly_bean" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/cgh_logo" />

            <TextView
                android:id="@+id/ed_imei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintStart_toStartOf="parent" />

            <Switch
                android:id="@+id/sw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="員工編號"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="parent" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="413dp"
                android:layout_height="321dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutEmployeeId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:hint="@string/email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/IDorEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F0F7F2"
                        android:drawableEnd="@drawable/ic_login_user"
                        android:drawableRight="@drawable/ic_login_user"
                        android:fontFamily="@font/poppinsmedium"
                        tools:targetApi="jelly_bean" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:hint="@string/password"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmployeeId"
                    tools:layout_editor_absoluteX="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F0F7F2"
                        android:singleLine="true"
                        tools:targetApi="jelly_bean" />

                </com.google.android.material.textfield.TextInputLayout>

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />

                <Button
                    android:id="@+id/buttonLogin"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="39dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_info_btn"
                    android:text="一般登入"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayoutPassword"
                    app:layout_constraintTop_toBottomOf="@+id/progress" />

                <TextView
                    android:id="@+id/signUpText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/signuphere"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
                    tools:targetApi="jelly_bean" />

                <CheckBox
                    android:id="@+id/seepw"
                    android:layout_width="25dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="10dp"
                    android:button="@drawable/ic_login_eye"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayoutPassword"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmployeeId" />

                <CheckBox
                    android:id="@+id/rememberme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="記住我"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayoutPassword"
                    app:layout_constraintTop_toTopOf="@+id/buttonLogin" />

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="忘記密碼"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/signUpText" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <ImageButton
                    android:id="@+id/touchidimageButton"
                    style="@android:style/Widget.ImageButton"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="248dp"
                    android:layout_marginTop="8dp"
                    android:background="?attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/icon_login_touch_id" />

                <ImageButton
                    android:id="@+id/faceidimageButton"
                    style="@android:style/Widget.ImageButton"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="?attr/selectableItemBackground"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/icon_login_face_id" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>
