<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account_Fragment">

    <!-- TODO: Update blank fragment layout -->
<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:text="@string/hello_blank_fragment" />-->



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/editTextMeetingPassword"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="特定會議之密碼"
                    android:inputType="textCapCharacters"
                    android:textColor="#03a9f4"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonMeetingPasswordConfirm"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="確定"
                    android:theme="@style/GrayButton" />

                <Button
                    android:id="@+id/buttonMeetingScan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:text="QR Code"
                    android:theme="@style/GrayButton" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBoxOnSchedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="8dp"
                android:checked="true"
                android:text="僅顯示未舉行的會議"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerMeetingItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left|center_vertical|center_horizontal|center"
                android:background="@drawable/gradient_spinner"
                android:minHeight="40dp"
                android:popupBackground="#626262"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/linear_grey_2"
            android:orientation="vertical"
            android:showDividers="middle">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/linear_dark_grey_2"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="15dp">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meeting_name"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/bright_foreground_disabled_material_dark"
                        android:textIsSelectable="true"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textViewMeegingName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/background_material_light"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView21"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="主持人"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/bright_foreground_disabled_material_dark"
                                android:textIsSelectable="true"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/textViewMeetingMederator"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/background_material_light"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView13"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="紀錄"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/bright_foreground_disabled_material_dark"
                                android:textIsSelectable="true"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/textViewMeetingRecorder"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:textColor="@color/background_material_light"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meeting_time"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/bright_foreground_disabled_material_dark"
                        android:textIsSelectable="true"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textViewMeetingTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/background_material_light"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meeting_place"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/bright_foreground_disabled_material_dark"
                        android:textIsSelectable="true"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textViewMeetingPlace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/background_material_light"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView26"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meeting_manager"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/bright_foreground_disabled_material_dark"
                        android:textIsSelectable="true"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textViewMeetingManager"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/background_material_light"
                        android:textSize="16sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageViewMeetingCancel"
                    android:layout_width="160dp"
                    android:layout_height="80dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom|right|center_vertical|center_horizontal|center"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="30px"
                    android:src="@drawable/meeting_cancel" />

            </FrameLayout>


        </LinearLayout>



</FrameLayout>